# sidecar/openapi.json
@@ -993,6 +993,19 @@
                     "type": "string",
                     "minLength": 1
                   },
+                  "tokenKeyVersionSelected": {
+                    "default": null,
+                    "anyOf": [
+                      {
+                        "type": "integer",
+                        "exclusiveMinimum": 0,
+                        "maximum": 9007199254740991
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ]
+                  },
                   "projectId": {
                     "type": "string",
                     "format": "uuid",
@@ -1345,6 +1358,26 @@
                   "$schema": "https://json-schema.org/draft/2020-12/schema",
                   "type": "object",
                   "properties": {
+                    "tokenKeyVersionUsed": {
+                      "anyOf": [
+                        {
+                          "type": "integer",
+                          "exclusiveMinimum": 0,
+                          "maximum": 9007199254740991
+                        },
+                        {
+                          "type": "null"
+                        }
+                      ]
+                    },
+                    "sourceIdsReached": {
+                      "type": "array",
+                      "items": {
+                        "type": "string",
+                        "format": "uuid",
+                        "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
+                      }
+                    },
                     "columnTypes": {
                       "type": "array",
                       "items": {
@@ -1399,6 +1432,8 @@
                     }
                   },
                   "required": [
+                    "tokenKeyVersionUsed",
+                    "sourceIdsReached",
                     "columnTypes",
                     "columns",
                     "rows",
@@ -1482,6 +1517,19 @@
                   "requestId": {
                     "type": "string",
                     "minLength": 1
+                  },
+                  "tokenKeyVersionSelected": {
+                    "default": null,
+                    "anyOf": [
+                      {
+                        "type": "integer",
+                        "exclusiveMinimum": 0,
+                        "maximum": 9007199254740991
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ]
                   },
                   "projectId": {
                     "type": "string",
